# iterative-exploring-of-bio-stimulants

./: .gitignore  README.md  accelerate.json  pyproject.toml  run.sh
src/: config.py  prepare.py  recommend.py
src/docking/: train.py
src/extract/: align_compounds_and_smiles.py  predict_compound_names.py  train.py
src/misc/: background_work.py  check_update.py
